A docking station can release a bike

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,12 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/dockingStation.js"></script>
+  <script src="src/DockingStation.js"></script>
+  <script src="src/Bike.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/dockingStationSpec.js"></script>
+  <script src="test/docking_station_spec.js"></script>
+  <script src="test/bike_spec.js"></script>
 
 </head>
 
